Realizei a segunda alteracao no projeto usando git

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <h1>Alteração realizada para testes de snapshot com Git!</h1>
+        <h1>Segunda alteração realizada para testes de snapshot com Git!</h1>
     </header>
     <section id="pacotes">
         <h2>Conheça nossos pacotes</h2>
