Adicionado o novo menu, teste com nova branch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav>
             <ul><!-- lista não ordenada -->
                 <li><a href="#">Pacotes</a></li>
+		<li><a href="#">Link Adicionado</a></li>
                 <li><a href="#">Taxa</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
