Realizada alteração de cabecalho para teste com nova branch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <h1>Segunda alteração realizada para testes de snapshot com Git!</h1>
+        <h1>Projeto em nova branch para teste com git</h1>
     </header>
     <section id="pacotes">
         <h2>Conheça nossos pacotes</h2>
