--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <h1>Projeto em nova branch para teste com git</h1>
+        <h1> Os melhores pacotes de viagens esperando por você :) </h1>
     </header>
     <section id="pacotes">
         <h2>Conheça nossos pacotes</h2>
