--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viagem dos Sonhos</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,12 +13,11 @@
         <nav>
             <ul><!-- lista não ordenada -->
                 <li><a href="#">Pacotes</a></li>
-		<li><a href="#">Link Adicionado</a></li>
                 <li><a href="#">Taxa</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <h1> Os melhores pacotes de viagens esperando por você :) </h1>
+        <h1>Venha realizar a viagem dos seus sonhos!</h1>
     </header>
     <section id="pacotes">
         <h2>Conheça nossos pacotes</h2>
@@ -148,5 +148,7 @@
     <footer>
         <p>Desenvolvido por BrunoCaetano</p>        
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
