--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
+        <p>Linha a ser apagada posteriormente!</p>
         <h1>Venha realizar a viagem dos seus sonhos!</h1>
     </header>
     <section id="pacotes">
