Adicionando bootstrap grid nas imagens.

--- a/index.html
+++ b/index.html
@@ -32,28 +32,21 @@
             <hr>
         </p>
 
-        <div class="figuras">
-            <figure>
+        <div class="row">
+            <figure class="col text-center">
                 <img src="img/nossos-pacotes/gramado.jpg" alt="imagem de um chale em gramado">
                 <figcaption>Gramado</figcaption>
             </figure>
-            <figure>
+            <figure class="col text-center">
                 <img src="img/nossos-pacotes/porto-seguro.jpg" alt="imagem de uma ilha em porto seguro">
                 <figcaption>Gramado</figcaption>
             </figure>
-            <figure>
+            <figure class="col text-center">
                 <img src="img/nossos-pacotes/rio-de-janeiro.jpg" alt="imagem de Rio de Janeiro vista de cima">
                 <figcaption>Gramado</figcaption>
             </figure>
         </div>
 
-        <div class="videos">
-            <video width="320" height="240" controls>
-                <source src="video/rabbit320.mp4" type="video/mp4">
-                <source src="video/rabbit320.webm" type="video/webm">
-                Seu navegador não suporta a exibição de vídeo.<a href="video/rabbit320.mp4">Clique aqui para baixar</a>
-            </video>
-        </div>
     </section>
 
     <section>
