Realizado alteracoes no css adicionando bootstrap container-fluid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="container-fluid p-2 bg-warning text-center">
         <nav class="navbar navbar-expand-lg bg-warning">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Viagem dos Sonhos</a>
@@ -41,7 +41,7 @@
           </nav>
         <h1>Venha realizar a viagem dos seus sonhos!</h1>
     </header>
-    <section id="pacotes">
+    <section class="container-fluid bg-light text-center">
         <h2>Conheça nossos pacotes</h2>
         <p>
             textotextotextotextotextotextotexto
@@ -71,7 +71,7 @@
 
     </section>
 
-    <section>
+    <section class="container-fluid bg-warning">
         <h2>Taxas e Serviços</h2>
         <p>Veja nossas taxas para serviços</p>
         <table>
@@ -98,6 +98,8 @@
             </tbody>
         </table>
         <br>
+    </section>
+    <section class="container-fluid bg-light">
         <h2>Orçamento</h2>
         <form method="GET" action="">
 
@@ -160,7 +162,7 @@
             <button>Salvar</button>
         </form>
     </section>
-    <footer>
+    <footer class="container-fluid bg-warning">
         <p>Desenvolvido por BrunoCaetano</p>        
     </footer>
 
