--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </nav>
         <h1>Venha realizar a viagem dos seus sonhos!</h1>
     </header>
-    <section class="container-fluid bg-light text-center">
+    <section class="container-fluid bg-light text-center p-2">
         <h2>Conheça nossos pacotes</h2>
         <p>
             textotextotextotextotextotextotexto
@@ -71,18 +71,18 @@
 
     </section>
 
-    <section class="container-fluid bg-warning">
+    <section class="container-fluid bg-warning text-center p-2">
         <h2>Taxas e Serviços</h2>
         <p>Veja nossas taxas para serviços</p>
-        <table>
+        <table class="table table-warning table-striped table-hover table-bordered border-warning">
             <caption>Descrição dos serviços e respectivos valores</caption>
-            <thead>
+            <thead class="table-secondary">
                 <tr>
                     <th>Serviço</th>
                     <th>Valor</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="table-group-divider">
                 <tr>
                     <td>Reserva de hotel</td>
                     <td>R$150,00</td>
@@ -99,7 +99,7 @@
         </table>
         <br>
     </section>
-    <section class="container-fluid bg-light">
+    <section class="container-fluid bg-light p-2">
         <h2 class="text-center">Faça já seu orçamento!</h2>
         <form method="GET" action="">
             <fieldset>
@@ -155,6 +155,7 @@
                     </label>
                 </div> 
             </fieldset>
+            <br>
             <button class="btn btn-secondary">Salvar</button>
         </form>
     </section>
