inserido cards bootstrap nos pacotes de viagens.

--- a/index.html
+++ b/index.html
@@ -79,31 +79,52 @@
     </header>
     <section class="container-fluid bg-light text-center p-2">
         <h2>Conheça nossos pacotes</h2>
-        <p>
-            textotextotextotextotextotextotexto
-            textotextotextotextotextotextotexto
-            textotextotextotextotextotextotexto
-            textotextotextotextotextotextotexto
-            textotextotextotextotextotextotexto
-            <br><br>
-            <a href="http://br.lipsum.com/feed/html">Link</a>
-            <hr>
-        </p>
+        <p>textotextotextotextotexto.</p>
 
-        <div class="row">
-            <figure class="col text-center">
-                <img src="img/nossos-pacotes/gramado.jpg" alt="imagem de um chale em gramado">
-                <figcaption>Gramado</figcaption>
-            </figure>
-            <figure class="col text-center">
-                <img src="img/nossos-pacotes/porto-seguro.jpg" alt="imagem de uma ilha em porto seguro">
-                <figcaption>Gramado</figcaption>
-            </figure>
-            <figure class="col text-center">
-                <img src="img/nossos-pacotes/rio-de-janeiro.jpg" alt="imagem de Rio de Janeiro vista de cima">
-                <figcaption>Gramado</figcaption>
-            </figure>
-        </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/nossos-pacotes/gramado.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-warning">
+                      <h5 class="card-title">Gramado</h5>
+                      <h1 class="card-subtitle text-muted">R$5.000,00</h1>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <a href="#" class="btn btn-primary">Reservar</a>
+                    <div class="card-footer">
+                      <small class="text-body-secondary">Em até 24x</small>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/nossos-pacotes/porto-seguro.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-warning">
+                      <h5 class="card-title">Porot Seguro</h5>
+                      <h1 class="card-subtitle text-muted">R$4.000,00</h1>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <a href="#" class="btn btn-primary">Reservar</a>
+                    <div class="card-footer">
+                      <small class="text-body-secondary">Em até 24x</small>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <img src="img/nossos-pacotes/rio-de-janeiro.png" class="card-img-top" alt="...">
+                    <div class="card-body bg-warning">
+                      <h5 class="card-title">Rio de Janeiro</h5>
+                      <h1 class="card-subtitle text-muted">R$2.000,00</h1>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <a href="#" class="btn btn-primary">Reservar</a>
+                    <div class="card-footer">
+                      <small class="text-body-secondary">Em até 24x</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
     </section>
 
