--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Viagem dos Sonhos</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,21 +20,27 @@
               <div class="collapse navbar-collapse justify-content-end bg-warning" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Pacotes</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Início</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Taxas</a>
+                    <a class="nav-link" aria-current="page" href="#pacotes">Pacotes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#taxas">Taxas</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Contato
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#orcamento">Orçamento</a></li>
+                      <li><a class="dropdown-item" href="#">Email</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Outros contatos</a></li>
                     </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="bi bi-cart3"></i></a>
                   </li>
                 </ul>
               </div>
@@ -77,7 +84,7 @@
           </div>
 
     </header>
-    <section class="container-fluid bg-light text-center p-2">
+    <section class="container-fluid bg-light text-center p-2" id="pacotes">
         <h2>Conheça nossos pacotes</h2>
         <p>textotextotextotextotexto.</p>
 
@@ -90,7 +97,7 @@
                       <h1 class="card-subtitle text-muted">R$5.000,00</h1>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
-                    <a href="#" class="btn btn-primary">Reservar</a>
+                    <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservar</a>
                     <div class="card-footer">
                       <small class="text-body-secondary">Em até 24x</small>
                     </div>
@@ -104,7 +111,7 @@
                       <h1 class="card-subtitle text-muted">R$4.000,00</h1>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
-                    <a href="#" class="btn btn-primary">Reservar</a>
+                    <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservar</a>
                     <div class="card-footer">
                       <small class="text-body-secondary">Em até 24x</small>
                     </div>
@@ -118,7 +125,7 @@
                       <h1 class="card-subtitle text-muted">R$2.000,00</h1>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
-                    <a href="#" class="btn btn-primary">Reservar</a>
+                    <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservar</a>
                     <div class="card-footer">
                       <small class="text-body-secondary">Em até 24x</small>
                     </div>
@@ -128,7 +135,7 @@
 
     </section>
 
-    <section class="container-fluid bg-warning text-center p-2">
+    <section class="container-fluid bg-warning text-center p-2" id="taxas">
         <h2>Taxas e Serviços</h2>
         <p>Veja nossas taxas para serviços</p>
         <table class="table table-warning table-striped table-hover table-bordered border-warning">
@@ -156,7 +163,7 @@
         </table>
         <br>
     </section>
-    <section class="container-fluid bg-light p-2">
+    <section class="container-fluid bg-light p-2" id="orcamento">
         <h2 class="text-center">Faça já seu orçamento!</h2>
         <form method="GET" action="">
             <fieldset>
@@ -217,8 +224,27 @@
         </form>
     </section>
     <footer class="container-fluid bg-warning">
-        <p>Desenvolvido por BrunoCaetano</p>        
+        <p class="text-center">Desenvolvido por BrunoCaetano :}</p>        
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Suas compras</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Produto adicionado ao carrinho!
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Continuar comprando</button>
+          <a href="checkout.html" type="button" class="btn btn-success">Finaliza a compra</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </html>
